bug(code): Fix horizontal scrolling of the element code

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -194,7 +194,7 @@ t-item[aria-selected] label {
 }
 
 pre {
-  margin: 3px 0;
+  margin: 0;
 }
 
 build-status {
